Initial merge of SAK-16837.
Resolved the following conflicts. Still need to resolve some issues with the style sheet and verify the jsp's.

svn status | grep -e "^C"                                                                                                                         
C      messageforums-app/src/java/org/sakaiproject/tool/messageforums/jsf/HierDataTableRender.java
CM     messageforums-app/src/webapp/css/msgcntr.css
C      messageforums-app/src/webapp/jsp/discussionForum/message/dfViewMessage.jsp
C      messageforums-app/src/webapp/jsp/discussionForum/message/dfAllMessages.jsp
C      messageforums-app/src/webapp/jsp/discussionForum/message/dfViewThreadBodyInclude.jsp
C      messageforums-app/src/webapp/jsp/discussionForum/forumsOnly/dfForums.jsp


git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-17049@66903 66ffb92e-73f9-0310-93c1-f5514f145a0a