@@ -300,8 +300,9 @@ public class HierDataTableRender extends HtmlBasicRenderer
 			//////
 			if(dmb.getDepth() > 0 && !"true".equals(noArrows))
 			{
-				//////writer.write("<div style=\"display:none\"  id=\"_id_" + Integer.valueOf(hideDivNo).toString() + "__hide_division_" + "\">");
+				//////writer.write("<div class=\"hideDiv\" style=\"display:none\"  id=\"_id_" + new Integer(hideDivNo).toString() + "__hide_division_" + "\">");
 				writer.write("<tr style=\"display:none\" id=\"_id_" + Integer.valueOf(hideDivNo).toString() + "__hide_division_" + "\">");
+>>>>>>> .merge-right.r65916
 			}
 			else if(dmb.getDepth() > 0)
 			{
